--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
 
   user-service:
-    build: ../Back - usuarios y profesores
+    build: ../PS-Back-UsersTeachers
     container_name: user-service
     ports:
       - "8081:8081"
@@ -17,10 +17,11 @@ services:
     image: mysql:8.0
     container_name: users_db-mysql
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: users_db
-      MYSQL_USER: root
-      MYSQL_PASSWORD: mysql
+      MYSQL_USER: user_app
+      MYSQL_PASSWORD: user_pass
+      MYSQL_ROOT_PASSWORD: root_pass
+
     ports:
       - "3307:3306"
     expose:
