--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,23 @@ app.dev-email=avisos.consorcio@gmail.com
 
 
 # Database Configuration LABIV
-spring.datasource.url=jdbc:mysql://localhost:3306/users_db
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://mysql-db:3306/users_db
+spring.datasource.username=user_app
+spring.datasource.password=user_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 #####  SPRING DOC PROPERTIES #####
-springdoc.packages-to-scan=com.org.utn.tup.ps.controller
+springdoc.packages-to-scan=org.utn.tup.ps.Controller
 springdoc.show-actuator=true
 springdoc.swagger-ui.disable-swagger-default-url=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# JWT Configuration
+jwt.secret=GZ0Vj+wF6h3Q5p9c6P2pD72X8F2Fj6WjB6Y6g2Nh7D8=
+jwt.expiration=86400000
+
+
+spring.docker.compose.lifecycle-management=start_only
