arreglado docker compose, implementados logueos y envio de emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 jwt.secret=GZ0Vj+wF6h3Q5p9c6P2pD72X8F2Fj6WjB6Y6g2Nh7D8=
 jwt.expiration=86400000
 
+comms.service.url=http://news-service:8080/api/comms
 
 spring.docker.compose.lifecycle-management=start_only
