fixed cors and dockerfile for production

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,10 @@
         </dependency>
 
         <!-- test -->
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!-- mysql -->
 
         <dependency>
